# atlas

./: .env.example  .gitattributes  .gitignore  .graphifyignore  AGENTS.md  ATLAS.md  ATLAS_MANUAL_MASTERPLAN-1.md  AUDIT_QUICK_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_PROMPT.md  FINAL_CHECKLIST_3_ITEMS.md  FINAL_REMEDIATION_SUMMARY_2026-07-14.md  HONEST_VERDICT_OLLAMA_VS_CLOUD.md  MEMORY.md  NEXT_STEPS.md  PLAN_PUBLICACION.md  PROMETHEUS_HOY.md  QUICK_START_2026.md  README.md  REMEDIATION_COMPLETE_2026-07-14.md  REMEDIATION_FINAL_REPORT.md  REMEDIATION_RUNBOOK.md  ROADMAP.md  STATUS_FINAL_PHASE_REALTIME.md  UPDATE_STATUS_OLLAMA_FINAL.md  WORKFLOW_GUIDE.md  WORK_LEDGER.md  agents.md  alertmanager.yml  feedback-absorb-without-cloning.md  feedback-adversarial-audit-no-assumptions.md  feedback-semantic-checkpoint-per-source.md  mcp_servers.example.json  pyproject.toml  setup_atlas.sh  start_prometheus.sh  verify_prometheus.sh
.claude/: launch.json  settings.json
.codex/: hooks.json
.cursor/: hooks.json  mcp.json
.githooks/: post-checkout  post-commit  pre-commit
.github/workflows/: ci.yml
atlas-experiments/: README.md
config/: governance.json  permissions.yaml
config/governance/: gates.json
docs/: IMPLEMENTATION_PLAN_ITEMS_2_3.md  INDEX.yaml  INDEX_AUDIT_AND_IMPLEMENTATION.md  PROGRESS_2026-05-26.md  USAGE.md  adr_019_statistical_validation.md  adr_024_observability_logging_v2.md  adr_025_cold_update_manager.md  adr_026_hermes_twin_architecture.md  adr_028_twin_kanban.md  adr_029_audit_search_and_reverse_audit.md  adr_030_block_memory.md  adr_031_agentic_tool_loop.md  adr_032_mutating_tools_in_loop.md  adr_033_agentic_loop_refinements.md  adr_034_process_hardening.md  adr_035_mcp_client.md  adr_036_threat_model.md  adr_037_untrusted_content_boundary.md  adr_039_self_maintenance_agent.md  adr_042_cascade_routing.md  adr_043_verifiable_authorization.md  adr_045_swarm_blackboard.md  adr_046_worker_backend.md  adr_047_adversarial_verification_and_grounding.md  adr_048_verified_producer.md  adr_049_knowledge_organism.md  adr_052_odysseus_full_assimilation.md  adr_053_gateway_trust_completeness.md  adr_054_defense_in_depth_deception.md  adr_055_os_level_sandbox_jail.md  adr_056_red_team_tooling.md  atlas_box_architecture.md  atlas_max_capability_roadmap.md  audit_2026-05-25.md  audit_adr051_052_premortem_2026-06-15.md  audit_adr054_premortem_2026-06-15.md  audit_complete_2026-05-25.md  audit_complete_latest.json  audit_postmortem_2026-05-30.md  (+41 more)
docs/architecture/: ARCHITECTURE_MAP.md  ATLAS_HOSTED_REFERENCE_ARCHITECTURE.md  CAPABILITY_FABRIC.md  CONTROL_PLANE.md  DECISION_REVIEW.md  EVENT_KERNEL.md  GOVERNANCE_KERNEL.md  INTEGRATION_FABRIC.md  MEMORY_OS.md
docs/audits/: reality_latest.json  self_audit_2026-06-13.md  self_audit_2026-06-14.md  self_audit_2026-06-15.md  self_audit_2026-06-16.md  self_audit_2026-06-21.md  self_audit_loop.md
docs/canon/: ATLAS_AUTHORITY_LEDGER.yaml  ATLAS_CANON.yaml  ATLAS_CLAIMS.yaml  ATLAS_COMPONENT_REGISTRY.yaml  ATLAS_CONFLICT_REGISTER.yaml  ATLAS_COVERAGE.yaml  ATLAS_DECISION_QUEUE.yaml  ATLAS_GLOSSARY.yaml  ATLAS_INVENTORY_REPORT.yaml  ATLAS_PRECEDENCE.yaml  ATLAS_ROADMAP.yaml  ATLAS_SOURCE_LEDGER.yaml  ATLAS_TRACEABILITY.yaml  README.md
docs/compliance/: eu_ai_act_gaps_2026-06-18.md
docs/continuation/: ATLAS_WHAT_IT_IS_AND_COULD_BECOME.md  (+8 more)
graphify-out/: graph.html
knowledge-src/: preferencias
schemas/: account.schema.json  artifact.schema.json  business_core.schema.json  business_entity.schema.json  capability.schema.json  connection_recipe.schema.json  connector.schema.json  connector_health.schema.json  connector_pack.schema.json  decision.schema.json  devil_advocate_verdict.schema.json  entity_candidate.schema.json  event.schema.json  gate.schema.json  gate_ticket.schema.json  memory.schema.json  mission.schema.json  mission_receipt.schema.json  node.schema.json  objective.schema.json  onboarding_session.schema.json  permission.schema.json  platform_terms.schema.json  plugin_manifest.schema.json  policy_rule.schema.json  question_pack.schema.json  replay.schema.json  sector.schema.json  soul_manifest.schema.json  supply_chain_report.schema.json
scripts/: README.md  __init__.py  atlas-audit-24h.service  atlas-core.service  atlas_install_trunk.py  atlas_self_build.py  audit_complete.py  benchmark_workload.py  canon_audit.py  canon_inventory.py  canon_status.py  capability_route_hook.py  capability_route_hook.sh  capture-llm-failures.sh  code_graph.py  configure-ntp.sh  council_smoke.py  daemon_idle_guard.sh  deploy_hermes_vps_oneshot.sh  docs_graph.py  docs_index_audit.py  docs_triage.py  eval_longmemeval.py  eval_memory_benchmark.py  fetch_longmemeval.py  finalize_hermes_vps.sh  fix_hermes_413_payload.sh  fix_hermes_compression_and_skills.sh  fix_hermes_paths_vps.sh  fix_hermes_systemd_command.sh  gate_h_smoke.py  gate_i_smoke.py  google_workspace_mcp_wrapper.sh  graphify-autoremediation.sh  graphify-monitor-and-switch.sh  graphify_failure_guard.py  graphify_obsidian_export.py  graphify_semantic_resume.py  handoff_freshness_hook.sh  health-check.sh  (+45 more)
tests/: __init__.py  conftest.py  test_acp_server.py  test_adapter_registry.py  test_adr033_surfaces.py  test_adversarial_panel.py  test_agent_workspace_hygiene.py  test_agentic_executor.py  test_agentic_executor_gaps.py  test_appeal.py  test_apply_patch_failures.py  test_ast_guard.py  test_atlas_coder.py  test_atlas_core.py  test_atlas_trunk_wiring.py  test_attestation_provider.py  test_audit_runner_and_ci.py  test_audit_sample_autoloop.py  test_audit_search.py  test_authorization.py  test_autonomous_decider.py  test_batch_premortem.py  test_behavioral_consistency.py  test_behavioral_monitor.py  test_benchmark_gate.py  test_benchmark_workload.py  test_block_memory.py  test_browser.py  test_bwrap_jail.py  test_callgraph_to_kuzu.py  test_canon_audit.py  test_canon_inventory.py  test_capabilities.py  test_capability_router.py  test_cascade.py  test_catalog_resources.py  test_claude_code_tool.py  test_cli_code_engine.py  test_cli_completeness_demo.py  test_cli_gate_g.py  (+301 more)
(+1308 files in other folders)
