[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-core"
version = "0.12.0"
description = "Atlas Core — Sovereign local multi-agent operating system"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "litellm>=1.49",
    "kuzu>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.9",
]
voice = [
    "faster-whisper>=1.0",   # STT CPU — ADR-003
    "piper-tts>=1.0",        # TTS CPU — ADR-003
    "sounddevice>=0.4",      # audio I/O (portaudio2 requerido en sistema: apt install libportaudio2)
    "numpy>=1.24",           # array audio
]
computer-use = [
    "playwright>=1.45",      # BrowserTool / Gate F F1 (requiere: python -m playwright install chromium)
]
mcp = [
    # MCP trunk portable F1 — SDK oficial (incluye FastMCP). OPCIONAL: el núcleo
    # (MemoryTrunk) es usable sin esta dep; solo el shell de transporte la pide.
    "mcp>=1.2",
]
redteam = [
    # ADR-056: tooling de red-team SOLO dev/CI — NUNCA importado por el runtime.
    # Instalar en venv aislado y FIJAR torch al índice CPU para quedarse en ~1.8GB
    # (si no, garak arrastra torch+CUDA ~5-8GB):
    #   python -m venv .venv-redteam
    #   .venv-redteam/bin/pip install torch --index-url https://download.pytorch.org/whl/cpu
    #   .venv-redteam/bin/pip install garak
    # El harness corre con ATLAS_HOME aislado, jamás contra el servicio vivo.
    "garak>=0.15",
    # PyRIT (multi-turn agéntico). Conflicto cosmético: sube `datasets` a 5.x
    # (garak pide <4); verificado que garak sigue cargando su corpus igual.
    # El atacante LLM va por API (modelo abierto, p.ej. Groq) — los modelos
    # locales de este entorno no sirven (thinking-models / crash de Ollama).
    "pyrit>=0.14",
]

[project.scripts]
atlas = "atlas.interfaces.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "computer_use: requires Playwright (pip install 'atlas-core[computer-use]')",
]
addopts = "-m 'not computer_use'"
filterwarnings = [
    # httpx2 no es instalable como dependencia directa (conflictos de ecosistema);
    # este warning viene de starlette.testclient importado por fastapi.testclient
    # y es ruido externo sin acción posible en nuestro lado.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
# Pragmatismo Gate D: aceptamos funciones sin anotar exhaustivamente en
# codigo legacy. Mantenemos las garantias importantes: no implicit Optional
# + tipos consistentes + generics parametrizados.
disallow_any_generics = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_return_any = true
