[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-core"
version = "0.12.0"
description = "Atlas Core — Sovereign local multi-agent operating system"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "litellm>=1.49",
    "kuzu>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.9",
    # 2026-07-03: escáner de CVEs para el gate barato del pipeline self-audit
    # (roadmap "juicio real", corrección del Cónclave: lo determinista/barato
    # primero). Herramienta madura envuelta, no reinventada (adopt-real-not-shell).
    "pip-audit>=2.7",
]
voice = [
    "faster-whisper>=1.0",   # STT CPU — ADR-003
    "piper-tts>=1.0",        # TTS CPU — ADR-003
    "sounddevice>=0.4",      # audio I/O (portaudio2 requerido en sistema: apt install libportaudio2)
    "numpy>=1.24",           # array audio
]
computer-use = [
    "playwright>=1.45",      # BrowserTool / Gate F F1 (requiere: python -m playwright install chromium)
]
mcp = [
    # MCP trunk portable F1 — SDK oficial (incluye FastMCP). OPCIONAL: el núcleo
    # (MemoryTrunk) es usable sin esta dep; solo el shell de transporte la pide.
    "mcp>=1.2",
]
embeddings = [
    # Memoria semántica LOCAL (ONNX, SIN torch) — embeddings in-process, offline
    # tras la primera descarga del modelo. 2026-07-03: es el DEFAULT de
    # default_embedder() (antes StubEmbedder); usa ATLAS_EMBEDDER=stub para
    # optar por el hash barato (p.ej. CI/sandbox sin red en el primer arranque).
    # Elegido sobre sentence-transformers para EVITAR torch (~GBs), coherente con
    # la regla anti-deps-pesadas del repo (ver el extra `redteam`).
    "fastembed>=0.3",
]
redteam = [
    # ADR-056: tooling de red-team SOLO dev/CI — NUNCA importado por el runtime.
    # Instalar en venv aislado y FIJAR torch al índice CPU para quedarse en ~1.8GB
    # (si no, garak arrastra torch+CUDA ~5-8GB):
    #   python -m venv .venv-redteam
    #   .venv-redteam/bin/pip install torch --index-url https://download.pytorch.org/whl/cpu
    #   .venv-redteam/bin/pip install garak
    # El harness corre con ATLAS_HOME aislado, jamás contra el servicio vivo.
    "garak>=0.15",
    # PyRIT (multi-turn agéntico). Conflicto cosmético: sube `datasets` a 5.x
    # (garak pide <4); verificado que garak sigue cargando su corpus igual.
    # El atacante LLM va por API (modelo abierto, p.ej. Groq) — los modelos
    # locales de este entorno no sirven (thinking-models / crash de Ollama).
    "pyrit>=0.14",
]
# NOTA — scraping (Crawl4AI, absorbido 2026-07-02): NO es un extra de pip como
# los de arriba porque NO puede convivir en este venv. `crawl4ai` fija
# `unclecode-litellm==1.81.13`, que se instala bajo el MISMO nombre de import
# que nuestro `litellm` real (del que depende InferenceHub) — un
# `pip install -e .[scraping]` normal SUSTITUIRÍA silenciosamente esa
# dependencia crítica. Se instala en un venv totalmente aparte y se invoca por
# subprocess (ver src/atlas/tools/crawler.py + _crawl4ai_worker.py):
#   python3 -m venv .venv-scraping
#   .venv-scraping/bin/pip install crawl4ai
#   .venv-scraping/bin/python3 -m playwright install chromium

[project.scripts]
atlas = "atlas.interfaces.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "computer_use: requires Playwright (pip install 'atlas-core[computer-use]')",
]
addopts = "-m 'not computer_use'"
filterwarnings = [
    # httpx2 no es instalable como dependencia directa (conflictos de ecosistema);
    # este warning viene de starlette.testclient importado por fastapi.testclient
    # y es ruido externo sin acción posible en nuestro lado.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
# Pragmatismo Gate D: aceptamos funciones sin anotar exhaustivamente en
# codigo legacy. Mantenemos las garantias importantes: no implicit Optional
# + tipos consistentes + generics parametrizados.
disallow_any_generics = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_return_any = true
