[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-core"
version = "0.12.0"
description = "Atlas Core — Sovereign local multi-agent operating system"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.1",
    "rich>=15.0.0",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "cryptography>=49.0.0",
    "litellm>=1.89.0",
    "kuzu>=0.11.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "mypy>=1.9",
    # 2026-07-03: escáner de CVEs para el gate barato del pipeline self-audit
    # (roadmap "juicio real", corrección del Cónclave: lo determinista/barato
    # primero). Herramienta madura envuelta, no reinventada (adopt-real-not-shell).
    "pip-audit>=2.7",
]
voice = [
    "faster-whisper>=1.0",   # STT CPU — ADR-003
    "piper-tts>=1.0",        # TTS CPU — ADR-003
    "sounddevice>=0.4",      # audio I/O (portaudio2 requerido en sistema: apt install libportaudio2)
    "numpy>=1.24",           # array audio
]
computer-use = [
    "playwright>=1.45",      # BrowserTool / Gate F F1 (requiere: python -m playwright install chromium)
]
mcp = [
    # MCP trunk portable F1 — SDK oficial (incluye FastMCP). OPCIONAL: el núcleo
    # (MemoryTrunk) es usable sin esta dep; solo el shell de transporte la pide.
    "mcp>=1.2",
]
embeddings = [
    # Memoria semántica LOCAL (ONNX, SIN torch) — embeddings in-process, offline
    # tras la primera descarga del modelo. 2026-07-03: es el DEFAULT de
    # default_embedder() (antes StubEmbedder); usa ATLAS_EMBEDDER=stub para
    # optar por el hash barato (p.ej. CI/sandbox sin red en el primer arranque).
    # Elegido sobre sentence-transformers para EVITAR torch (~GBs), coherente con
    # la regla anti-deps-pesadas del repo (ver el extra `redteam`).
    "fastembed>=0.3",
]
evolution = [
    # 2026-07-04: envuelve openevolve (codelion/openevolve, 6.6k stars,
    # Apache-2.0, activo) para EvolutionGate — selección de variantes reales
    # (islas + mutación) sobre ítems de backlog difíciles, en la escala de
    # UN ítem, no de un linaje completo de agente (corrección del Cónclave:
    # "aprendizaje evolutivo por categorías" sin variantes reales era
    # estadística sin mecanismo causal). Compatible con Groq/NVIDIA NIM vía
    # api_base OpenAI-compatible — probado en vivo, sin conflictos de deps.
    "openevolve>=0.2.27",
]
redteam-garak = [
    # ADR-056 (amend. 2026-07-15): Garak y PyRIT NO comparten entorno.
    # Garak 0.15.x exige datasets<4 y arrastra torch; instalar en su propio venv
    # con el índice CPU. El harness además aísla ATLAS_HOME del servicio vivo.
    "garak>=0.15,<0.16",
    "torch>=2.6",
]
redteam-pyrit = [
    # PyRIT 0.14.x exige datasets>=4.8 y por tanto vive en otro venv. El atacante
    # va por API; este extra sigue siendo tooling dev/CI, nunca runtime Atlas.
    "pyrit>=0.14,<0.15",
]
acp = [
    "agent-client-protocol>=0.11.0",
]
media-gen = [
    "fal-client>=1.0.0",
]
# NOTA — scraping (Crawl4AI, absorbido 2026-07-02): NO es un extra de pip como
# los de arriba porque NO puede convivir en este venv. `crawl4ai` fija
# `unclecode-litellm==1.81.13`, que se instala bajo el MISMO nombre de import
# que nuestro `litellm` real (del que depende InferenceHub) — un
# `pip install -e .[scraping]` normal SUSTITUIRÍA silenciosamente esa
# dependencia crítica. Se instala en un venv totalmente aparte y se invoca por
# subprocess (ver src/atlas/tools/crawler.py + _crawl4ai_worker.py):
#   python3 -m venv .venv-scraping
#   .venv-scraping/bin/pip install crawl4ai
#   .venv-scraping/bin/python3 -m playwright install chromium

[project.scripts]
atlas = "atlas.interfaces.cli:cli"

[tool.uv]
# Los metadatos oficiales son incompatibles. uv los resuelve en forks separados
# y rechaza que ambos extras se activen en un mismo entorno.
conflicts = [
    [
        { extra = "redteam-garak" },
        { extra = "redteam-pyrit" },
    ],
]

[tool.uv.sources]
# Evita que el extra aislado de Garak descargue wheels CUDA/NVIDIA innecesarios
# en esta máquina CPU-only. La selección sólo se activa para ese extra.
torch = [{ index = "torch-cpu", extra = "redteam-garak" }]

[[tool.uv.index]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"atlas.interfaces" = ["templates/*.html"]

[tool.setuptools.data-files]
"share/atlas-core/config" = ["config/governance.json", "config/permissions.yaml"]
"share/atlas-core/fixtures/connection_recipes" = ["fixtures/connection_recipes/*.json"]
"share/atlas-core/fixtures/connector_packs" = ["fixtures/connector_packs/*.json"]
"share/atlas-core/fixtures/connectors" = ["fixtures/connectors/*.json"]
"share/atlas-core/fixtures/governance" = ["fixtures/governance/*.json"]
"share/atlas-core/fixtures/question_packs" = ["fixtures/question_packs/*.json"]
"share/atlas-core/fixtures/security" = ["fixtures/security/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "computer_use: requires Playwright (pip install 'atlas-core[computer-use]')",
]
addopts = "-m 'not computer_use'"
filterwarnings = [
    # httpx2 no es instalable como dependencia directa (conflictos de ecosistema);
    # este warning viene de starlette.testclient importado por fastapi.testclient
    # y es ruido externo sin acción posible en nuestro lado.
    "ignore::starlette.exceptions.StarletteDeprecationWarning",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
# Pragmatismo Gate D: aceptamos funciones sin anotar exhaustivamente en
# codigo legacy. Mantenemos las garantias importantes: no implicit Optional
# + tipos consistentes + generics parametrizados.
disallow_any_generics = true
disallow_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_decorators = false
warn_unused_ignores = true
warn_return_any = true
